# backend.ai

./: .devcontainer.json  .devskim.json  .dockerignore  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mcp.json  .readthedocs.yaml  .readthedocs.yml  .response  .task1-study-summary.md  .travis.yml  1987.misc.md  AGENTS.md  ALEMBIC.md  BA-6541-kata-verification-plan.md  BGTASK_RETRY_IMPLEMENTATION_PLAN.md  BUILD  BUILDING.md  BUILD_ROOT  CHANGELOG.md  CLAUDE.md  DEVIATION.md  Gemfile  KUBERNETES-AGENT-TESTING.md  LICENSE  MIGRATION.md  Makefile  NEED_TO_CHANGE.md  PLAN.md  README.md  README.rst  SCHEDULER_TODO.md  TEST_TODO.md  VERIFICATION.md  VERSION  _config.yml  (+106 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.serena/: project.yml
_includes/: head.html  page-header.html
asyncudp/: __init__.py
beps/: README.md
changes/: .breaking.md  .chore.md  .deps.md  .enhance.md  .feature  .feature.md  .fix.md  .misc.md  0.fix.md  1000.feature.md  10012.enhance.md  10013.enhance.md  10014.enhance.md  10015.enhance.md  10016.enhance.md  10017.enhance.md  10018.enhance.md  1002.fix.md  10020.doc.md  10021.feature.md  10022.feature.md  10023.enhance.md  10024.doc.md  10025.feature.md  10026.fix.md  10028.feature.md  10029.feature.md  1003.fix.md  10031.feature.md  10032.feature.md  10033.feature.md  1004.fix.md  10048.fix.md  1005.feature.md  10050.feature.md  10051.feature.md  10052.feature.md  10053.feature.md  10054.feature.md  10055.feature.md  (+4469 more)
configs/: AGENTS.md  CLAUDE.md
css/: tango.css
dba/: anonymize_db.sql  download_and_anonymize.sh  dump_and_upload.sh
doc/: conf.py  index.rst
docker/: agent-entrypoint.sh  backend.ai-agent.dockerfile  backend.ai-appproxy-coordinator.dockerfile  backend.ai-appproxy-worker.dockerfile  backend.ai-client.dockerfile  backend.ai-manager-entrypoint.sh  backend.ai-manager.Dockerfile  backend.ai-storage-proxy.dockerfile  backend.ai-webserver.dockerfile  krunner-extractor.dockerfile  socket-relay.dockerfile
docs/: .gitignore  BA-5608-investigation.md  Makefile  README.md  build-images.md  conf.py  dood3-diff.md  dood3-install.md  dood_agent_host.md  dood_agent_pod.md  index.html  index.rst  k8s-control-plane-and-native-agent-diff.md  k8s-control-plane-and-native-agent-host.md  k8s-control-plane-and-native-agent-install.md  make.bat  model-deployment-zero-downtime.html  model-deployment-zero-downtime.md  requirements.txt  test.py
examples/: client.py  server.py
plugins/: .gitignore  .ignore  README.md
proposals/: AGENTS.md  BEP-0000-template.md  BEP-1000-redefining-accelerator-metadata.md  BEP-1001-app-injection.md  BEP-1002-agent-architecture.md  BEP-1003-define-test-scenario-verifying-agent-functionality.md  BEP-1004-scenario-tester.md  BEP-1005-unified-appproxy.md  BEP-1006-service-deployment-strategy.md  BEP-1007-storage-agent.md  BEP-1008-RBAC.md  BEP-1009-model-serving-registry.md  BEP-1010-new-gql.md  BEP-1012-RBAC.md  BEP-1013-GraphQL-schema-for-new-model-service.md  BEP-1014-preemption-of-low-priority-sessions.md  BEP-1015-keypair-user-project-resource-policy-reorg.md  BEP-1016-accelerator-interface-v2.md  BEP-1017-model-scanner-model-downloader.md  BEP-1018-local-cache-for-model-vfolders.md  BEP-1019-minio-artifact-registry-storage.md  BEP-1020-vfolder-destination-support-for-artifact-import.md  BEP-1021-gql-string-filter-enhancement.md  BEP-1022-pydantic-field-annotations.md  BEP-1023-unified-config-consolidation.md  BEP-1024-agent-rpc-connection-pooling.md  BEP-1025-server-side-csv-export.md  BEP-1026-email-notification-channel.md  BEP-1026-fair-share-scheduler.md  BEP-1027-entity-name-resolver.md  BEP-1027-entity-querier.md  BEP-1028-kubernetes-bridge.md  BEP-1029-sokovan-observer-handler.md  BEP-1030-sokovan-scheduler-status-transition.md  BEP-1030-statistics-repository.md  BEP-1031-graphql-field-metadata.md  BEP-1032-unified-input-validation.md  BEP-1033-sokovan-handler-test-scenarios.md  BEP-1034-kernel-v2-gql-implementation.md  BEP-1035-request-id-tracing.md  (+40 more)
requirements/: build.txt  dev.txt  docs.txt  lint.txt  typecheck.txt
resources/: app_template.json  image_metadata.json  theme.json
scenarios/: .gitignore  00_setup.sh  01_vfolder_lifecycle.sh  02_session_lifecycle.sh  03_model_card_deploy.sh  04_deployment_revision.sh  05_teardown_verification.sh  06_multi_user_access.sh  07_vfolder_invite_clone.sh  08_cross_project_isolation.sh  09_vfolder_mounted_delete.sh  10_vfolder_cloneable_false.sh  11_vfolder_bulk_ops.sh  12_vfolder_file_io.sh  13_session_exec_logs.sh  14_deployment_endpoint_serve.sh  15_session_concurrency_cap.sh  99_teardown.sh  README.md  run_all.sh
scripts/: .gitignore  activate_revision.py  activate_revision_gql.py  add_future_annotations.py  add_revision.py  add_revision_gql.py  alembic-rebase.py  assign-pr-number.py  backfill_model_definitions.py  backfill_model_definitions.sh  bootstrap-static-python.sh  build-agent-image.sh  build-scies.sh  build-wheel.sh  build-wheels.sh  bump_next_release_version.py  check-alembic-revision.py  check-backport-commits.py  check-cross-imports.sh  check-docker.py  check-docs-label.sh  check-multiple-alembic-heads.py  clear-test-containers.sh  compose-graphql-router.sh  configure-minio.sh  create_deployment.py  create_deployment_gql.py  delete-dev.sh  delete_dev_env.sh  determine-release-type.py  diff-release.py  download-external-tools.sh  download-webui-release.sh  dowork.py  export-pants.sh  extract-release-changelog.py  fetch-ruff-version.py  freeze_release_version.py  generate-gql-schema.py  generate-graphql-schema.sh  (+67 more)
src/ai/backend/watcher/storage/: BUILD  setup.cfg  watcher.py  watcher.toml  webapp.py
stubs/: BUILD
test_scenarios/: agent.md  auth.md  container_registry.md  domain.md  group.md  image.md  keypair_resource_policy.md  metric.md  model_serving.md  project_resource_policy.md  resource_preset.md  session.md  user.md  user_resource_policy.md  (+1 more)
(+28731 files in other folders)
