[project]
requires-python = "~=3.13.7"
name = "backend.ai"
dynamic = ["version"]

[tool.towncrier]
package = "ai.backend.manager"  # reference point for getting __version__
filename = "CHANGELOG.md"
directory = "changes/"
title_format = ""  # embedded inside the template
template = "changes/template.md"
start_string = "<!-- towncrier release notes start -->\n"
issue_format = "([#{issue}](https://github.com/lablup/backend.ai/issues/{issue}))"
underlines = ["", "", ""]

# NOTE: A single PR may have multiple news fragments with different types.

[[tool.towncrier.type]]
    # Put breaking changes that should be announced loudly.
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

[[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

[[tool.towncrier.type]]
    # Describe general improvements, such as internal refactoring, optimization,
    # performance improvements, and etc. that do not introduce new features.
    directory = "enhance"
    name = "Improvements"
    showcontent = true

[[tool.towncrier.type]]
    directory = "deprecation"
    name = "Deprecations"
    showcontent = true

[[tool.towncrier.type]]
    directory = "fix"
    name = "Fixes"
    showcontent = true

[[tool.towncrier.type]]
    directory = "doc"
    name = "Documentation Updates"
    showcontent = true

[[tool.towncrier.type]]
    # Describe notable changes of external/upstream dependencies
    # that may require installers updates and extra concerns
    # to upgrade existing setups.
    directory = "deps"
    name = "External Dependency Updates"
    showcontent = true

[[tool.towncrier.type]]
    directory = "misc"
    name = "Miscellaneous"
    showcontent = true

[[tool.towncrier.type]]
    directory = "test"
    name = "Test Updates"
    showcontent = true

[tool.pytest.ini_options]
testpaths = "tests"
markers = [
    "integration: Test cases that spawn Dockerized kernel sessions",
]
filterwarnings = [
    "ignore::DeprecationWarning:etcd3.*:",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    # Default
    "E",      # pycodestyle errors: PEP8 style violations
    "W",      # pycodestyle warnings: PEP8 style warnings
    "F",      # pyflakes: detects unused imports, undefined names, and other logical errors
    "I",      # isort: enforces consistent import ordering
    # Phase 1: Zero violations
    "T10",    # flake8-debugger: prevents debugger statements (pdb, breakpoint) in production code
    "FA",     # flake8-future-annotations: enforces `from __future__ import annotations`
    "ISC",    # flake8-implicit-str-concat: detects implicit string concatenation bugs
    "EXE",    # flake8-executable: validates shebang and file permissions consistency
    # Phase 2-3: Minimal violations (<50)
    "LOG",    # flake8-logging: enforces logging best practices (warn -> warning, etc.)
    # Note: LOG015 (root-logger-call) is intentionally not ignored - root logger usage should be reviewed
    "FLY",    # flynt: converts old-style string formatting to f-strings
    "PIE",    # flake8-pie: catches misc. code smells (duplicate class fields, unnecessary pass, etc.)
    "FURB",   # refurb: suggests modern Python idioms (Path.read_text, etc.)
    # "DTZ",  # flake8-datetimez: enforces timezone-aware datetime usage (208 violations - deferred)
    # Phase 4: Raise statement validation
    "RSE",    # flake8-raise: enforces proper raise statement usage
    # "T20",  # flake8-print: detects print statements (689 violations - deferred for careful review)
    # Phase 5: Performance, simplification, and comprehensions
    "PERF",   # perflint: detects performance anti-patterns
    "SIM",    # flake8-simplify: suggests code simplification
    "RUF",    # ruff-specific: Ruff's own linting rules
    "C4",     # flake8-comprehensions: optimizes list/set/dict comprehensions
    # Phase 6: Bug detection and code quality
    "B",      # flake8-bugbear: detects likely bugs and design issues
    # Phase 7: Type annotations and modern syntax (deferred - requires extensive review)
    # "A",    # flake8-builtins: prevents shadowing Python builtins
    # "BLE",  # flake8-blind-except: prevents bare except clauses
    # "RET",  # flake8-return: enforces consistent return statement usage
    # "ANN",  # flake8-annotations: enforces type annotations
    # "UP",   # pyupgrade: suggests modern Python syntax
    # "TID252", # flake8-tidy-imports: enforces relative imports (banned-module-level-imports)
]
ignore = [
    "E203",   # whitespace before ':' - conflicts with Black formatter
    "E731",   # lambda assignment - sometimes useful for simple callbacks
    "E501",   # line too long - handled by formatter
    # PIE
    "PIE790", # unnecessary-pass - sometimes useful for readability in empty blocks
    # FURB
    "FURB157", # verbose-decimal-constructor - Decimal("0") is intentional for precision
    "FURB187", # use-list-reverse - Sequence type cannot be reversed in place
    # FLY
    "FLY002", # static-join-to-f-string - unsafe fix, may change behavior
    # PIE
    "PIE796", # non-unique-enums - intentional aliases for backward compatibility
    # RSE
    "RSE102", # unnecessary-paren-on-raise-exception - stylistic, explicit () is common practice
    # PERF
    "PERF102", # incorrect-dict-iterator - dict.items() iteration is often intentional for clarity
    "PERF401", # manual-list-comprehension - requires careful refactoring, may affect readability
    "PERF402", # manual-list-copy - existing pattern is explicit
    "PERF403", # manual-dict-comprehension - requires careful refactoring
    # SIM
    "SIM102", # collapsible-if - nested if statements often improve readability
    "SIM105", # suppressible-exception - explicit try-except is clearer for error handling
    "SIM108", # if-else-block-instead-of-if-exp - ternary can reduce readability for complex conditions
    "SIM110", # reimplemented-builtin - explicit loops are sometimes clearer than any()/all()
    "SIM115", # open-file-with-context-handler - some file operations need explicit close control
    "SIM117", # multiple-with-statements - nested with statements often improve readability
    "SIM118", # in-dict-keys - explicit .keys() is sometimes clearer
    # RUF
    "RUF003", # ambiguous-unicode-character-comment - intentional use of special characters (e.g., × for multiplication)
    "RUF005", # collection-literal-concatenation - explicit concatenation is sometimes clearer
    "RUF006", # asyncio-dangling-task - fire-and-forget tasks are intentional in some cases
    "RUF009", # function-call-in-dataclass-default - cast() in dataclass defaults is intentional
    "RUF012", # mutable-class-default - existing codebase uses mutable defaults intentionally
    "RUF015", # unnecessary-iterable-allocation-for-first-element - [0] is clearer than next(iter())
    "RUF022", # unsorted-dunder-all - semantic ordering may be preferred over alphabetical
    "RUF032", # decimal-from-float-literal - intentional float to Decimal conversion
    "RUF059", # unused-unpacked-variable - _ convention not always followed
    # C4
    "C408",  # unnecessary-collection-call - dict()/tuple()/list() can be clearer than literals in some cases
    "C416",  # unnecessary-comprehension - explicit comprehension can be clearer
    "C417",  # unnecessary-map - map() is valid Python and sometimes preferred
    # B (bugbear)
    "B007",  # unused-loop-control-variable - intentional in many cases (e.g., async for chunk in stream)
    "B008",  # function-call-in-default-argument - defer for gradual review (18 violations)
    "B012",  # return-in-finally - intentional pattern in some response handlers
    "B017",  # assert-raises-exception - testing generic Exception is sometimes needed
    "B023",  # function-uses-loop-variable - defer for gradual review (46 violations, some intentional)
    "B024",  # abstract-base-class-without-abstract-method - intentional design pattern
    "B027",  # empty-method-without-abstract-decorator - intentional empty methods for extensibility
    "B028",  # no-explicit-stacklevel - stacklevel can be omitted in many logging calls
    "B904",  # raise-without-from-inside-except - extensive legacy codebase, defer for gradual migration
    "B905",  # zip-without-explicit-strict - Python 3.10+ feature, defer for gradual adoption
    "B911",  # batched-without-explicit-strict - Python 3.13+ feature
]

[tool.ruff.lint.isort]
known-first-party = ["ai.backend"]
known-local-folder = ["src"]
known-third-party = ["alembic", "redis", "kubernetes"]
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"src/ai/backend/manager/config.py" = ["E402"]
"src/ai/backend/manager/models/alembic/env.py" = ["E402"]
"src/ai/backend/logging/otel.py" = ["LOG015"]  # root logger usage is intentional for OTEL initialization

[tool.ruff.format]
preview = true  # enable the black's preview style

[tool.black]
# unused for our codebase but preserved for `pants tailor`
line-length = 100
preview = true

[tool.mypy]
plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]
ignore_missing_imports = true
follow_untyped_imports = false
mypy_path = "stubs:src:tools/pants-plugins"
namespace_packages = true
explicit_package_bases = true
python_executable = "dist/export/python/virtualenvs/python-default/3.13.7/bin/python"
disable_error_code = ["typeddict-unknown-key"]

[tool.pyright]
pythonVersion = "3.13"
include = [
    "src",
    "tools/pants-plugins",
]
stubPath = "stubs"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/ai/backend/webui",
    "src/ai/backend/web/static",
]
venvPath = "dist/export/python/virtualenvs/python-default"
venv = "3.13.7"
typeCheckingMode = "standard"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false

[tool.setuptools.dynamic]
version = { file = "VERSION" }
