[metadata]
name = backend.ai
version = attr: ai.backend.meta.__version__
description = Lablup Backend.AI Meta-package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = devops@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Healthcare Industry
    Intended Audience :: Financial and Insurance Industry
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Framework :: AsyncIO
project_urls =
    Documentation = https://docs.backend.ai
    Source = https://github.com/lablup/backend.ai
    Tracker = https://github.com/lablup/backend.ai/issues

[options]
zip_safe = False
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8
setup_requires =
    setuptools>=45.0.0
install_requires =
    backend.ai-client~=20.9.0a1

[options.packages.find]
where = src
include = ai.backend.meta

[options.extras_require]
manager =
    backend.ai-manager~=20.09.0a1
agent =
    backend.ai-agent~=20.09.0a1
build =
    wheel>=0.34.2
    twine>=3.2.0
    setuptools>=49.0.0
dev =
test =
    pytest~=6.1.2
lint =
    flake8>=3.8.4
typecheck =
    mypy>=0.790
docs =
    sphinx~=3.3
    sphinx-rtd-theme>=0.5.0
    pygments~=2.3

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E731,E221,E241,E126,E127,E129,E401,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.tox,.eggs,*.egg,__pycache__,venv,build,docs,docker

[tool:pytest]
testpaths = tests
