[metadata]
name = backend.ai-storage-watcher
version = attr: src.ai.backend.watcher_modules.storage.__version__
description = Backend.AI Watcher for Storage Proxy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = devops@lablup.com
license = Proprietary
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.11
setup_requires =
    setuptools>=68.0.0
install_requires =
    aiohttp~=3.8.1
    attrs>=20.3
    trafaret~=2.1

[options.extras_require]
build =
    wheel>=0.36.2
    twine>=3.2.0
lint =
    flake8>=3.9.0
typecheck =
    mypy>=0.812
dev =
    pytest-sugar>=0.9.1
ci =

[options.entry_points]
backendai_watcher_v10 =
    storage = ai.backend.watcher_modules.storage.watcher:StorageWatcherPlugin

backendai_watcher_webapp_v10 =
    storage = ai.backend.watcher_modules.storage.webapp:StorageWatcherWebapp

[options.packages.find]
where = src
include = ai.backend.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
